# cmake_including_rust

./: CMakeLists.txt  README.md  clean.sh
rust_hello/: Cargo.toml
rust_hello/binding/: rust_hello.h
rust_hello/src/: lib.rs
src/: main.cpp
